Add body text & examples

--- a/html/web_basics/index.html
+++ b/html/web_basics/index.html
@@ -1,9 +1,22 @@
 <!DOCTYPE html>
 <html>
+
 <head>
-	<title>Release 1 Practice</title>
+ <title>Release 1 Practice</title>
 </head>
+
 <body>
  <h1>Round 1: FIGHT!</h1>
+  <p>This is a <strong>strong</strong> example of what <em>emphasis</em> looks like.</p>
+  <ul>
+  	<li>Test ul 1</li>
+  	<li>Test ul 2</li>
+  </ul>
+  <ol>
+    <li>Test ol 1</li>
+    <li>Test ol 2</li>
+  </ol>
+  <p>That should be just about <a href="https://www.google.com/">everything.</p>
 </body>
+
 </html>
