Add second practice table

--- a/html/table-practice.html
+++ b/html/table-practice.html
@@ -23,6 +23,21 @@
 			<td>Zed</td>
 		</tr>
 	</table>
+<br />
+	<table border=1>
+		<tr>
+			<th colspan=3>Super Happy Fun Stuff! :)</th>
+		</tr>
+		<tr>
+			<td>Flowers</td>
+			<td rowspan=2>Cats</td>
+			<td>Candy</td>
+		</tr>
+		<tr>
+			<td>Water slides</td>
+			<td>More cats</td>
+		</tr>
+	</table>
 </body>
 
 </html>
