--- a/html/gps/index.html
+++ b/html/gps/index.html
@@ -1,9 +1,111 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>HTML Layout</title>
+	<title>Chicken Page</title>
 </head>
 
 <body>
+	<header>
+		<h1 id="page-header">Chicken Information</h1>
+		<nav>
+			<ul>
+				<li><a href="#general-chicken">General Information</a></li>
+				<li><a href="#specific-chicken">Super Specific Information</a></li>
+			</ul>
+		</nav>
+	</header>
+
+	<main>
+		<section id="general-chicken">
+			<h3>General Info</h3>
+			<p>
+				Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
+				tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
+				quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
+				consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
+				cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
+				proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+			</p>
+		</section>
+		<hr />
+		<section id="specific-chicken">
+			<h3>Specific Info</h3>
+			<p>
+				Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
+				tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
+				quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
+				consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
+				cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
+				proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+			</p>
+		</section>
+	</main>
+
+	<aside>
+		<h6>Chicken Vocab.</h6>
+		<ul>
+			<li>Vocabulary Word</li>
+			<li>Vocabulary Word</li>
+			<li>Vocabulary Word</li>
+		</ul>
+	</aside>
+
+	<article>
+		<h4>Here are some interesting facts about chickens that most people don't know!</h4>
+		<ol>
+			<li>Chicken fact 1</li>
+			<li>Chicken fact 2</li>
+			<li>Chicken fact 3</li>
+			<li>Chicken fact 4</li>
+			<li>Chicken fact 5</li>
+			<li>Chicken fact 6</li>
+			<li>Chicken fact 7</li>
+		</ol>
+	</article>
+
+	<aside>
+		<h3>When should I buy my chickens?</h3>
+		<table id="buying-guide" border=1>
+			<tr>
+				<td>&nbsp;</td>
+				<th>Winter</th>
+				<th>Spring</th>
+				<th>Summer</th>
+				<th>Autumn</th>
+			</tr>
+			<tr>
+				<th>Brown</th>
+				<td>No</td>
+				<td>Yes</td>
+				<td>Yes</td>
+				<td>No</td>
+			</tr>
+			<tr>
+				<th>Red</th>
+				<td>Yes</td>
+				<td>Yes</td>
+				<td>No</td>
+				<td>No</td>
+			</tr>
+			<tr>
+				<th>White</th>
+				<td>No</td>
+				<td>No</td>
+				<td>Yes</td>
+				<td>No</td>
+			</tr>
+			<tr>
+				<th>Speckled</th>
+				<td>No</td>
+				<td>Yes</td>
+				<td>Yes</td>
+				<td>Yes</td>
+			</tr>
+		</table>
+	</aside>
+
+	<footer>
+		<nav><a href="#page-header">Back to the top of the page</a></nav>
+	</footer>
 </body>
 </html>
