Add nav link for guide

--- a/html/gps/index.html
+++ b/html/gps/index.html
@@ -11,6 +11,7 @@
 			<ul>
 				<li><a href="#general-chicken">General Information</a></li>
 				<li><a href="#specific-chicken">Super Specific Information</a></li>
+				<li><a href="#buying-guide">Buying Guide</a></li>
 			</ul>
 		</nav>
 	</header>
