--- a/css/positioning/index.html
+++ b/css/positioning/index.html
@@ -5,5 +5,8 @@
 	<link rel="stylesheet" type="text/css" href="styles.css">
 </head>
 <body>
+	<img src="hat.png" id="hat">
+	<img src="glasses.png" id="glasses">
+	<img src="octopus.png" id="octopus">
 </body>
 </html>
